compiler/testData/diagnostics/tests/suppress/manyWarnings/onPropertyAccessor.kt
class C {
    val foo: String?
        @Suppress("REDUNDANT_NULLABLE", "UNNECESSARY_NOT_NULL_ASSERTION")
        get(): String?? = ""!! <!USELESS_CAST!>as String??<!>
}